syntax = "proto3";

/* WARNING: This schema was created manually and is untested.
 * It's recommended that you generate a new schema using the
 * generateSchemaText function. */

/*
 * Contains Models from:
 * - Tachiyomi (0.13.5)
 * - Neko (2.9.4)
 * - TachiyomiJ2K (1.5.5)
 * - TachiyomiAZ (8.7.0)
 * - TachiyomiSY (1.8.4)
 */

message Backup {
    repeated BackupManga backupManga = 1;
    repeated BackupCategory backupCategories = 2;
    // Bump by 100 to specify this is a 0.x value
    repeated BrokenBackupSource backupBrokenSources = 100;
    repeated BackupSource backupSources = 101;

    // SY specific values
    repeated BackupSavedSearch backupSavedSearches = 600;
}

message BackupCategory {
    string name = 1;
    int64 order = 2;
    // int32 updateInterval = 3; // 1.x value not used in 0.x
    // Bump by 100 to specify this is a 0.x value
    int64 flags = 100;

    // SY specific values
    repeated int64 mangaOrder = 600;

    // J2K Specific values
    int32 mangaSort = 800; // char
}

message BackupChapter {
    // in 1.x some of these values have different names
    // url is called key in 1.x
    string url = 1;
    string name = 2;
    optional string scanlator = 3;
    bool read = 4;
    bool bookmark = 5;
    // lastPageRead is called progress in 1.x
    int64 lastPageRead = 6;
    int64 dateFetch = 7;
    int64 dateUpload = 8;
    // chapterNumber is called number is 1.x
    float chapterNumber = 9;
    int64 sourceOrder = 10;

    // J2K specific values
    int32 pagesLeft = 800;
}

message BackupFlatMetadata {
    // SY specific message
    BackupSearchMetadata searchMetadata = 1;
    repeated BackupSearchTag searchTags = 2;
    repeated BackupSearchTitle searchTitles = 3;
}

message BackupSearchMetadata {
    // SY specific message
    optional string uploader = 1;
    string extra = 2;
    optional string indexedExtra = 3;
    int32 extraVersion = 4;
}

message BackupSearchTag {
    // SY specific message
    optional string namespace = 1;
    string name = 2;
    int32 type = 3;
}

message BackupSearchTitle {
    // SY specific message
    string title = 1;
    int32 type = 2;
}

message BrokenBackupHistory {
    // string url = 0;
    int64 lastRead = 1;
}

message BackupHistory {
    string url = 1;
    int64 lastRead = 2;
}

message BackupManga {
    // in 1.x some of these values have different names
    int64 source = 1;
    // url is called key in 1.x
    string url = 2;
    string title = 3;
    optional string artist = 4;
    optional string author = 5;
    optional string description = 6;
    repeated string genre = 7;
    int32 status = 8;
    // thumbnailUrl is called cover in 1.x
    optional string thumbnailUrl = 9;
    // string customCover = 10; // 1.x value, not used in 0.x
    // int64 lastUpdate = 11; // 1.x value, not used in 0.x
    // int64 lastInit = 12; // 1.x value, not used in 0.x
    int64 dateAdded = 13;
    int32 viewer = 14; // Replaced by viewer_flags
    // int32 flags = 15; // 1.x value, not used in 0.x
    repeated BackupChapter chapters = 16;
    repeated int64 categories = 17;
    repeated BackupTracking tracking = 18;
    // Bump by 100 for values that are not saved/implemented in 1.x but are used in 0.x
    bool favorite = 100;
    int32 chapterFlags = 101;
    repeated BrokenBackupHistory brokenHistory = 102;
    optional int32 viewer_flags = 103;
    repeated BackupHistory history = 104;

    // SY specific values
    repeated BackupMergedMangaReference mergedMangaReferences = 600;
    optional BackupFlatMetadata flatMetadata = 601;
    int32 customStatus = 602;

    // J2K specific values
    optional string customTitle = 800;
    optional string customArtist = 801;
    optional string customAuthor = 802;
    // skipping 803 due to using duplicate value in previous builds
    optional string customDescription = 804;
    repeated string customGenre = 805;

    // Neko specific values
    optional string mergedMangaUrl = 900;
    optional string mergedMangaImageUrl = 902;
    optional string scanlatorFilter = 901;
}

message BackupMergedMangaReference {
    // SY merged manga backup class
    bool isInfoManga = 1;
    bool getChapterUpdates = 2;
    int32 chapterSortMode = 3;
    int32 chapterPriority = 4;
    bool downloadChapters = 5;
    string mergeUrl = 6;
    string mangaUrl = 7;
    int64 mangaSourceId = 8;
}

message BackupSavedSearch {
    // SY saved searches class
    string name = 1;
    string query = 2;
    string filterList = 3;
    int64 source = 4;
}

message BrokenBackupSource {
    // string name = 0;
    int64 sourceId = 1;
}

message BackupSource {
    string name = 1;
    int64 sourceId = 2;
}

message BackupTracking {
    // in 1.x some of these values have different types or names
    // syncId is called siteId in 1,x
    int32 syncId = 1;
    // LibraryId is not null in 1.x
    int64 libraryId = 2;
    // Deprecated: Use mediaId instead
    int32 mediaIdInt = 3 [deprecated = true];
    // trackingUrl is called mediaUrl in 1.x
    string trackingUrl = 4;
    string title = 5;
    // lastChapterRead is called last read, and it has been changed to a float in 1.x
    float lastChapterRead = 6;
    int32 totalChapters = 7;
    float score = 8;
    int32 status = 9;
    // startedReadingDate is called startReadTime in 1.x
    int64 startedReadingDate = 10;
    // finishedReadingDate is called endReadTime in 1.x
    int64 finishedReadingDate = 11;
    int64 mediaId = 100;
}
